--- a/portfolio/css/style.css
+++ b/portfolio/css/style.css
@@ -4,42 +4,43 @@
 
 /* ---- base ---- */
 
-html,body{ 
+html,
+body { 
 	width:100%;
 	height:100%;
 	background:#111;
 }
 
-html{
+html {
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 
-body{
+body {
   font:normal 75% Arial, Helvetica, sans-serif;
 }
 
-canvas{
-  display:block;
-  vertical-align:bottom;
+canvas {
+  display: block;
+  vertical-align: bottom;
 }
 
 a {
   text-decoration: none;
 }
 
-#blocks .article-block a h3:hover{
+#blocks .article-block a h3:hover {
   color: #a7dd31
 }
 /* ---- particles.js container ---- */
 
-#particles-js{
+#particles-js {
   background-color: rgba(0, 0, 0, 0.89);
-  position:fixed;
-  top:0;
-  right:0;
-  bottom:0;
-  left:0;
-  z-index:0;
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  z-index: 0;
 }
 
 #overlay {
@@ -48,12 +49,13 @@ a {
   position: relative;
 }
 
-.Ontop{
+.Ontop {
   z-index: 99;
   position: relative;
 }
 
-html, body {
+html, 
+body {
   -webkit-font-smoothing: antialiased;
 }
 body {
@@ -63,6 +65,7 @@ body {
   overflow-y: scroll;
   line-height: 21px;
 }
+
 img {
   max-width: 100%;
 }
@@ -77,40 +80,48 @@ h1, h2, h3, h4, h5, h6 {
   margin-top: 0;
   margin-bottom: .5rem;
 }
+
 /* Start styling for header area*/
 header {
-    padding-top:10px;
+    padding-top: 10px;
 }
-header .container{
-  max-width:980px;
+
+header .container {
+  max-width: 980px;
   display: flex;
   position: relative;
 }
+
 header .line {
   border-bottom: solid 4px #a7dd31;
-  width:100%;
+  width: 100%;
 }
+
 header .left {
-  width:40%;
-  float:left;
+  width: 40%;
+  float: left;
 }
+
 header .right {
-  width:90%;
+  width: 90%;
   text-align: right;
   float: right;
 }
-header .right .fulName{
-  padding-bottom:5px;
+
+header .right .fulName {
+  padding-bottom: 5px;
   font-weight: normal;
   text-transform: uppercase;
 }
-header .right .jobDiscription{
-  font-size:15px;
+
+header .right .jobDiscription {
+  font-size: 15px;
   font-weight: normal;
   line-height: 21px;
 }
+
 header .profileImage {
-  background: url("../img/me.png") no-repeat center;
+  background: url(../img/me.png) no-repeat center;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
@@ -122,7 +133,7 @@ header .profileImage {
 }
 
 .udacityLogo {
-  background: url("../img/Udacity_logo.png") no-repeat center;
+  background: url(../img/Udacity_logo.png) no-repeat center;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
@@ -132,6 +143,7 @@ header .profileImage {
   width: 140px;
   height: 100px;
 }
+
 /* End styling for header area*/
 h2.heading {
   text-transform: uppercase;
@@ -141,15 +153,18 @@ h2.heading {
   font-weight: normal;
   color:#666;
 }
-h2.heading span{
+
+h2.heading span {
   background: #eee;
-  padding-right:10px;
+  padding-right: 10px;
 }
+
 .container {
-  max-width:980px;
+  max-width: 980px;
   margin: 0 auto;
-  padding:10px 20px;
+  padding: 10px 20px;
 }
+
 /* Start stylying for portfolio items*/
 #blocks {
   display: flex; 
@@ -159,10 +174,11 @@ h2.heading span{
   display: -webkit-flex;
   -webkit-flex-flow: row wrap;
 }
+
 #blocks .article-block {
   background: #fff;
   width: 32%;
-  margin-bottom:2%;
+  margin-bottom: 2%;
   text-align: left;
   box-shadow: 0 2px 0 #D9E1E7;
   -moz-box-sizing: border-box;
@@ -170,49 +186,55 @@ h2.heading span{
   flex-shrink: 0;
   border-radius: 3px;
 }
-#blocks .article-block img{
+
+#blocks .article-block img {
   border-radius: 3px 3px 0 0;
 }
-#blocks .article-block .text_block{
+
+#blocks .article-block .text_block {
   padding: 1.25rem;
   text-align: center;
 }
+
 #blocks .article-block h3 {
-  font-size:18px;
+  font-size: 18px;
   color:#444;
 }
+
 #blocks .article-block:nth-child(3n-1) {
-  margin-right:2%;
-  margin-left:2%;
+  margin-right: 2%;
+  margin-left: 2%;
 }
 /* End stylying for portfolio items*/
 footer {
-  max-width:980px;
-  margin:0 auto;
-  padding:10px 20px;
+  max-width: 980px;
+  margin: 0 auto;
+  padding: 10px 20px;
 }
+
 /*Media Queries*/
 /*For devices with width between 600px and 850px*/
 @media screen and (min-width: 600px) and (max-width: 850px)  {
   #blocks .article-block{
-    width:49%;
+    width: 49%;
   }
+
   #blocks .article-block:nth-child(odd) {
-    margin-right:2%;
-    margin-left:0px;
+    margin-right: 2%;
+    margin-left: 0px;
   }
+  
   #blocks .article-block:nth-child(even) {
-    margin-right:0px;
-    margin-left:0px;
+    margin-right: 0px;
+    margin-left: 0px;
   }
 }
 /*For devices with width up to 600px*/    
 @media screen and (max-width: 600px)  {
-  #blocks .article-block{
-    width:99%;
-    margin-right:0!important;
-    margin-left:0!important;
-    margin-bottom:20px;
+  #blocks .article-block {
+    width: 99%;
+    margin-right: 0!important;
+    margin-left: 0!important;
+    margin-bottom: 20px;
   }
 }
-
